<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Protocol Adapter</string>
    <string name="btn_send_command">Send Command</string>
    <string name="btn_connect_devices">Connect</string>
    <string name="btn_stop_pa">Stop PA</string>
    <string name="btn_start_pa">Start PA</string>
    <string name="btn_start_da">Start DA</string>
    <string name="btn_stop_da">Stop DA</string>
    <string name="lbl_title">Start the service directly if it\'s not started elsewhere</string>
    <string name="lbl_feedback_unknown">Protocol Adapter in unknown status</string>
    <string name="lbl_feedback_started">Protocol Adapter started!</string>
    <string name="btn_clear_logs">Clear Logs</string>
    <string name="btn_config_da">Config Device Adapter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="lbl_device">Device</string>
    <string name="lbl_device_adapter">Device Adapter</string>
    <string name="lbl_parameter">Parameter</string>
    <string name="lbl_command">Command</string>
    <string name="btn_disconnect_devices">Disconnect</string>
    <string name="configure_da">Choose the DA to configure</string>
    <string name="disconnect_dev">Choose the device to disconnect</string>
    <string name="connect_dev">Choose the device to connect to</string>
    <string name="send_command">Choose the device and the command to send</string>
    <string name="start_da">Choose the DA to start</string>
    <string name="stop_da">Choose the DA to stop</string>
    <!--<string name="start_ip_address">10.99.8.161</string>-->
    <string name="start_ip_address">192.168.1.2</string>
    <string name="init_port">8099</string>

</resources>
