<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="eu.fistar.sdcs.pa.MainActivity">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.30">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/lbl_title" />

            <TextView
                android:id="@+id/lblServiceFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lblTitle"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:text="@string/lbl_feedback_unknown" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lblServiceFeedback"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnStartService"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="startService"
                        android:text="@string/btn_start_pa" />

                    <Button
                        android:id="@+id/btnStopService"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:onClick="stopService"
                        android:text="@string/btn_stop_pa" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnStartDA"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:onClick="parseClick"
                        android:text="@string/btn_start_da" />

                    <Button
                        android:id="@+id/btnStopDA"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:onClick="parseClick"
                        android:text="@string/btn_stop_da" />

                    <Button
                        android:id="@+id/btnConfigDA"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:onClick="parseClick"
                        android:text="@string/btn_config_da" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                  <Button
                    android:id="@+id/btnConnectDevices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:onClick="parseClick"
                    android:text="@string/btn_connect_devices" />

                <Button
                    android:id="@+id/btnDisconnectDevices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:onClick="parseClick"
                    android:text="@string/btn_disconnect_devices" />

                <Button
                    android:id="@+id/btnSendCommand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:onClick="parseClick"
                    android:text="@string/btn_send_command" />

                <Button
                    android:id="@+id/btnClearLogs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:onClick="clearLogs"
                    android:text="@string/btn_clear_logs" />
          </LinearLayout>
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <!--<ScrollView-->
        <!--android:id="@+id/scrollBox"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="0.70">-->

        <!--<TextView-->
            <!--android:id="@+id/logBox"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"/>-->
        <com.artfulbits.aiCharts.ChartView
       		android:id="@+id/chartView"
       		chart="@xml/chart"
       		android:layout_width="fill_parent"
       		android:layout_height="0dp"
            android:layout_weight="0.70"/>

    <!--</ScrollView>-->

</LinearLayout>
